[gd_scene load_steps=24 format=3 uid="uid://d3e8dyh6kgl1m"]

[ext_resource type="Script" path="res://scenes/insidecave.gd" id="1_cgxv8"]
[ext_resource type="PackedScene" uid="uid://3kidvivnys7h" path="res://scenes/player.tscn" id="1_mcexe"]
[ext_resource type="Theme" uid="uid://babdwm0flbrd6" path="res://ScoreSize.tres" id="2_3or2i"]
[ext_resource type="Texture2D" uid="uid://v8ked14rm28b" path="res://cave.png" id="2_jrvp2"]
[ext_resource type="Texture2D" uid="uid://bmxadfct0tyws" path="res://heart emoji.png" id="3_0her5"]
[ext_resource type="Script" path="res://scenes/cave_quiz.gd" id="4_2bkl1"]
[ext_resource type="Script" path="res://scripts/quiz_ui.gd" id="6_nxdoo"]
[ext_resource type="StyleBox" uid="uid://b57oijho8rmej" path="res://normal_button_quiz.tres" id="7_x7mvy"]
[ext_resource type="StyleBox" uid="uid://buit2etobpl21" path="res://CorrectAnswerStyle.tres" id="8_vr3nm"]
[ext_resource type="StyleBox" uid="uid://bph3hfo4lpnd" path="res://WrongAnswerStyle.tres" id="9_7hs2s"]
[ext_resource type="StyleBox" uid="uid://dusrylw1u8v50" path="res://quiz_colours.tres" id="10_jnwkh"]
[ext_resource type="Theme" uid="uid://dvcwjkyhd571w" path="res://fontsize.tres" id="11_2vey4"]
[ext_resource type="Script" path="res://scenes/cave_exit.gd" id="12_2cp8n"]
[ext_resource type="Texture2D" uid="uid://e87w16exwim1" path="res://cave_exit.png" id="13_la6w8"]
[ext_resource type="Script" path="res://scenes/cave_dialogue_trigger.gd" id="14_kxadc"]
[ext_resource type="AudioStream" uid="uid://f2rgclch6of" path="res://audio_cave_1.mp3" id="15_by5se"]
[ext_resource type="Script" path="res://scenes/cave_dialogue_trigger_2.gd" id="15_xxpgy"]
[ext_resource type="AudioStream" uid="uid://doded3n3842hr" path="res://audio_cave_2.mp3" id="17_nes14"]
[ext_resource type="AudioStream" uid="uid://8xc4lcv5xkgd" path="res://audio_cave_4.mp3" id="18_yr1wc"]
[ext_resource type="AudioStream" uid="uid://cb2p64hr82gjg" path="res://audio_cave_3.mp3" id="20_mwjt5"]
[ext_resource type="Texture2D" uid="uid://bx8s3oq8ly36c" path="res://cave_quiz_sprite.png" id="21_xryte"]

[sub_resource type="Theme" id="Theme_q6g1k"]
default_font_size = 35

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6mfto"]
radius = 10.875
height = 44.7503

[node name="Insidecave" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_cgxv8")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1666.0
offset_top = -691.0
offset_right = 4108.0
offset_bottom = 2371.0
color = Color(0.101961, 0.0941176, 0.105882, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 1666.0
offset_top = 691.0
offset_right = 4689.0
offset_bottom = 2327.0
texture = ExtResource("2_jrvp2")
stretch_mode = 4

[node name="CharacterBody2D" parent="." instance=ExtResource("1_mcexe")]
position = Vector2(392, 1328)

[node name="LabelAnchor" type="Node2D" parent="CharacterBody2D"]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="CharacterBody2D/LabelAnchor"]
remote_path = NodePath("../../../World UI/UI position")
update_rotation = false
update_scale = false

[node name="World UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 3633.0
offset_top = 2132.0
offset_right = 3749.0
offset_bottom = 2172.0

[node name="UI position" type="Node2D" parent="World UI"]
position = Vector2(-3241, -804)

[node name="Panel" type="Panel" parent="World UI/UI position"]
offset_left = 739.0
offset_top = -533.0
offset_right = 959.0
offset_bottom = -302.0
theme_override_styles/panel = ExtResource("10_jnwkh")

[node name="Score" type="Label" parent="World UI/UI position/Panel" groups=["ScoreBox"]]
layout_mode = 0
offset_left = 29.0
offset_top = 37.0
offset_right = 190.0
offset_bottom = 117.0
theme = ExtResource("2_3or2i")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Lives" type="Label" parent="World UI/UI position/Panel" groups=["LivesBox"]]
layout_mode = 0
offset_left = 71.5
offset_top = 125.0
offset_right = 183.5
offset_bottom = 193.0
theme = ExtResource("2_3or2i")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Heart emoji" type="Sprite2D" parent="World UI/UI position/Panel" groups=["HeartEmoji"]]
position = Vector2(72.5, 162)
texture = ExtResource("3_0her5")

[node name="Panel2" type="Panel" parent="World UI/UI position" groups=["PanelBox"]]
visible = false
offset_left = -944.0
offset_top = 382.0
offset_right = 941.0
offset_bottom = 527.0
theme_override_styles/panel = ExtResource("10_jnwkh")

[node name="Label" type="Label" parent="World UI/UI position/Panel2" groups=["DialogueBox"]]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00265252
anchor_top = -0.0344828
anchor_right = -0.00265252
anchor_bottom = 0.124138
offset_left = 37.0
offset_top = 36.0
offset_right = 1858.0
offset_bottom = 96.0
theme = SubResource("Theme_q6g1k")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="QuizUI" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -1500.0
offset_right = 19.0
offset_bottom = -1480.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_nxdoo")
default_style = ExtResource("7_x7mvy")
correct_style = ExtResource("8_vr3nm")
wrong_style = ExtResource("9_7hs2s")

[node name="ColorRect" type="ColorRect" parent="QuizUI"]
layout_mode = 0
offset_left = -1000.0
offset_top = -554.0
offset_right = 1000.0
offset_bottom = 546.0

[node name="Panel" type="Panel" parent="QuizUI"]
layout_mode = 0
offset_left = -623.0
offset_top = -400.0
offset_right = 577.0
offset_bottom = 400.0
theme_override_styles/panel = ExtResource("10_jnwkh")

[node name="Label" type="Label" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 58.0
offset_top = 118.0
offset_right = 1150.0
offset_bottom = 359.0
theme = ExtResource("11_2vey4")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 70.0
offset_top = 412.0
offset_right = 526.0
offset_bottom = 534.8
theme = ExtResource("11_2vey4")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "A"

[node name="Button2" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 660.0
offset_top = 412.0
offset_right = 1116.0
offset_bottom = 534.8
theme = ExtResource("11_2vey4")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "B"

[node name="Button3" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 70.0
offset_top = 596.0
offset_right = 526.0
offset_bottom = 718.8
theme = ExtResource("11_2vey4")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "C"

[node name="Button4" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 660.0
offset_top = 596.0
offset_right = 1116.0
offset_bottom = 718.8
theme = ExtResource("11_2vey4")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "D"

[node name="TimerLabel" type="Label" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 956.0
offset_top = 29.0
offset_right = 1171.0
offset_bottom = 112.0
theme = ExtResource("11_2vey4")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Lives" type="Label" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 72.5
offset_top = 30.0
offset_right = 184.5
offset_bottom = 98.0
theme = ExtResource("2_3or2i")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Heart emoji" type="Sprite2D" parent="QuizUI/Panel"]
position = Vector2(79.5, 67)
texture = ExtResource("3_0her5")

[node name="Hint" type="Panel" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 348.0
offset_top = 56.0
offset_right = 848.0
offset_bottom = 556.0
theme_override_styles/panel = ExtResource("10_jnwkh")

[node name="Label" type="Label" parent="QuizUI/Panel/Hint"]
layout_mode = 0
offset_left = 31.0
offset_top = 32.0
offset_right = 471.0
offset_bottom = 380.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Close Hint" type="Button" parent="QuizUI/Panel/Hint"]
layout_mode = 0
offset_left = 150.0
offset_top = 400.0
offset_right = 350.0
offset_bottom = 460.0
text = "Close Hint"

[node name="Hint Button" type="Button" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 72.0
offset_top = 371.0
offset_right = 172.0
offset_bottom = 402.0
text = "Hint"

[node name="Statistics" type="ScrollContainer" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 361.0
offset_right = 1153.0
offset_bottom = 750.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Stats_Label" type="Label" parent="QuizUI/Panel/Statistics"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Exit" type="Button" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 1056.0
offset_top = 45.0
offset_right = 1156.0
offset_bottom = 105.0
theme_override_styles/normal = ExtResource("7_x7mvy")
text = "Exit"

[node name="Question Timer" type="Timer" parent="QuizUI"]
process_mode = 3

[node name="Global Timer" type="Timer" parent="QuizUI"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="QuizUI"]
bus = &"SFX"

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1466, 1637, 1742, 1389, 1565, 1430, 1432, 1437, 1334, 1463, 1253, 1453, 1208, 1461, 1141, 1495, 1056, 1498, 962, 1511, 879, 1461, 778, 1425, 688, 1472, 626, 1536, 505, 1570, 354, 1561, 256, 1526, 171, 1444, 150, 1375, 132, 1292, 150, 1210, 204, 1134, 296, 1057, 370, 1025, 413, 1011, 479, 983, 549, 931, 618, 895, 710, 826, 802, 771, 854, 734, 971, 601, 1066, 563, 1190, 562, 1321, 600, 1420, 652, 1459, 677, 1548, 689, 1697, 678, 1756, 659, 1956, 634, 2129, 567, 2110, 479, 2158, 380, 2211, 301, 2283, 265, 2421, 232, 2447, 236, 2515, 174, 2692, 192, 2841, 334, 2796, 427, 2866, 495, 2905, 540, 2858, 692, 2781, 756, 2706, 792, 2679, 811, 2665, 917, 2658, 1018, 2626, 1093, 2576, 1157, 2510, 1198, 2494, 1236, 2498, 1321, 2487, 1405, 2425, 1473, 2336, 1494, 2254, 1490, 2127, 1501, 2049, 1460, 2004, 1403, 1931, 1380, 1870, 1376, 1755, 1383, 1740, 1416, 1799, 1522, 1862, 1563, 1908, 1619, 3005, 1636, 2992, -13, 2168, 15, 1982, 307, 1913, 383, 1826, 384, 1748, 347, 1696, 295, 1417, 297, 1422, 352, 1351, 300, 1306, 304, 1267, 337, 1187, 359, 1111, 357, 1052, 346, 1013, 315, 996, 312, 958, 327, 896, 426, 857, 473, 818, 516, 801, 553, 778, 573, 682, 623, 616, 665, 596, 706, 470, 724, 379, 721, 270, 697, 252, 639, 240, 570, 241, 509, 198, 473, 122, 421, 105, 366, 117, 292, 201, 230, 265, 191, 332, 189, 416, 204, 489, 253, 529, 332, 516, 384, 480, 431, 440, 462, 391, 485, 354, 504, 344, 558, 341, 616, 423, 640, 484, 623, 558, 605, 627, 542, 694, 494, 754, 453, 800, 364, 820, 300, 880, 248, 968, 189, 1045, 167, 1205, 171, 1366, 194, 1440, 220, 1560, 241, 1664, 235, 1723, 216, 1810, 179, 1896, 191, 1970, 292, 2167, -4, -15, -18, -1, 1640)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1410, 772, 1358, 831, 1318, 874, 1285, 914, 1254, 933, 1135, 939, 1053, 939, 986, 893, 946, 836, 904, 823, 875, 858, 807, 876, 765, 901, 732, 926, 640, 983, 604, 1030, 572, 1072, 550, 1128, 529, 1182, 561, 1214, 588, 1204, 613, 1198, 654, 1244, 678, 1279, 710, 1304, 827, 1311, 854, 1301, 934, 1268, 999, 1241, 1083, 1236, 1169, 1268, 1212, 1299, 1332, 1347, 1418, 1318, 1486, 1322, 1585, 1317, 1688, 1288, 1759, 1268, 1840, 1247, 1899, 1228, 1929, 1176, 1972, 1104, 1975, 1095, 2034, 1101, 2069, 1088, 2134, 1068, 2169, 1047, 2186, 998, 2224, 998, 2310, 1023, 2394, 1045, 2448, 1039, 2516, 993, 2540, 893, 2515, 828, 2456, 801, 2450, 744, 2386, 690, 2283, 647, 2242, 660, 2166, 693, 2072, 715, 1948, 739, 1880, 753, 1788, 749, 1718, 749, 1594, 755, 1458, 755)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(2334, 1361, 2299, 1377, 2272, 1398, 2247, 1429, 2268, 1440, 2304, 1451, 2351, 1463, 2405, 1429, 2425, 1389, 2425, 1369, 2380, 1355)

[node name="Cave Exit" type="Area2D" parent="."]
position = Vector2(1870, 1889)
script = ExtResource("12_2cp8n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cave Exit"]
position = Vector2(-1545, -543)
rotation = -0.830777
scale = Vector2(8, 8)
shape = SubResource("CapsuleShape2D_6mfto")

[node name="Exit" type="Sprite2D" parent="Cave Exit"]
position = Vector2(-1538, -560)
scale = Vector2(2.54138, 2.47122)
texture = ExtResource("13_la6w8")

[node name="Label" type="Label" parent="Cave Exit"]
offset_left = -1579.0
offset_top = -824.0
offset_right = -1306.0
offset_bottom = -789.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="CaveDialogueTrigger" type="Area2D" parent="."]
scale = Vector2(5, 5)
audio_bus_name = &"Dialogue"
script = ExtResource("14_kxadc")
audio_stream = ExtResource("15_by5se")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CaveDialogueTrigger"]
polygon = PackedVector2Array(141.2, 287, 137.4, 261, 105.8, 237.6, 60.6, 211, 66.2, 208.4, 105.2, 232.4, 139.2, 256.8, 145.6, 287)

[node name="CaveDialogueTrigger2" type="Area2D" parent="."]
scale = Vector2(5, 5)
audio_bus_name = &"Dialogue"
script = ExtResource("15_xxpgy")
audio_stream1 = ExtResource("17_nes14")
audio_stream2 = ExtResource("18_yr1wc")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CaveDialogueTrigger2"]
polygon = PackedVector2Array(422.4, 114, 455.2, 130, 490.8, 149, 502.4, 164.6, 536.8, 162.8, 540, 158.8, 536.2, 158.8, 533.4, 160.6, 503.8, 161.8, 493.2, 148, 456, 127.8, 424.2, 111.6)

[node name="Cave Quiz" type="Area2D" parent="."]
position = Vector2(443, 1297)
scale = Vector2(5, 5)
audio_bus_name = &"Dialogue"
script = ExtResource("4_2bkl1")
audio_stream = ExtResource("20_mwjt5")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Cave Quiz"]
polygon = PackedVector2Array(414.2, -225.4, 395.8, -206.2, 395.4, -199.4, 461.4, -163.2, 482, -179.2, 480.4, -191.2, 471.6, -219.8, 434, -240.4)

[node name="Sprite2D" type="Sprite2D" parent="Cave Quiz"]
visible = false
position = Vector2(436.2, -201.6)
scale = Vector2(0.547143, 0.583679)
texture = ExtResource("21_xryte")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Cave Quiz"]

[connection signal="pressed" from="QuizUI/Panel/Hint/Close Hint" to="QuizUI" method="_on_close_hint_pressed"]
[connection signal="pressed" from="QuizUI/Panel/Hint Button" to="QuizUI" method="_on_hint_button_pressed"]
[connection signal="pressed" from="QuizUI/Panel/Exit" to="QuizUI" method="_on_exit_pressed"]
[connection signal="timeout" from="QuizUI/Question Timer" to="QuizUI" method="_on_timer_timeout"]
[connection signal="mouse_entered" from="Cave Exit" to="Cave Exit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Cave Exit" to="Cave Exit" method="_on_mouse_exited"]
[connection signal="body_entered" from="CaveDialogueTrigger" to="CaveDialogueTrigger" method="_on_body_entered"]
[connection signal="body_entered" from="CaveDialogueTrigger2" to="CaveDialogueTrigger2" method="_on_body_entered"]
[connection signal="mouse_entered" from="Cave Quiz" to="Cave Quiz" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Cave Quiz" to="Cave Quiz" method="_on_mouse_exited"]
